--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="overlay">
             <h1 class="title">Unreal Engine Development Service</h1>
             <div class="buttons text-center">
-                <a href="#service" class="btn btn-primary rounded w-lg btn-lg my-1">Our Service</a>
+                <a href=" https://up-meaux.org/" class="btn btn-primary rounded w-lg btn-lg my-1">Our Service</a>
                 <a href="#contact" class="btn btn-outline-light rounded w-lg btn-lg my-1">Contact Us</a>
             </div>              
         </div>      
